infra/kustomize/honey/darkmap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: darkmap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: darkmap
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
